<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name of the product" />

    <TextView
        android:id="@+id/product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name"
        tools:text="Description of product" />

    <ImageView
        android:id="@+id/product_status_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_description"
        app:srcCompat="@drawable/ic_baseline_check_circle_24"
        android:contentDescription="@string/content_desc_status_icon" />

    <TextView
        android:id="@+id/product_status_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/product_row_stock_available"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/product_status_icon"
        app:layout_constraintStart_toEndOf="@+id/product_status_icon"
        app:layout_constraintTop_toTopOf="@+id/product_status_icon" />

    <Button
        android:id="@+id/move_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_row_move_item"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/product_status_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/product_status_info" />

</androidx.constraintlayout.widget.ConstraintLayout>